build/log/idf_py_stderr_output_10238
Command: make -j 14 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
/home/frank/Projects/beemonitor/beemonitor/main/display.cpp: In function 'void display_init()':
/home/frank/Projects/beemonitor/beemonitor/main/display.cpp:16:20: error: 'struct u8g2_esp32_hal_t' has no member named 'sda'
   16 |     u8g2_esp32_hal.sda = (gpio_num_t)PIN_SDA;
      |                    ^~~
/home/frank/Projects/beemonitor/beemonitor/main/display.cpp:17:20: error: 'struct u8g2_esp32_hal_t' has no member named 'scl'
   17 |     u8g2_esp32_hal.scl = (gpio_num_t)PIN_SCL;
      |                    ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:104: esp-idf/main/CMakeFiles/__idf_main.dir/display.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6478: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
